<resources>
    <string name="app_name">MvRx_Project</string>
    <string name="main_activity">main activity</string>
    <string name="main_fragment">main FRAGMENT</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="increment">Increment</string>
    <string name="go_back">Go Back</string>
    <string name="go_to_second_screen">Go To Second Screen</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="nationality">Nationality</string>
    <string name="age">Age</string>
    <string name="hobbies">Hobbies</string>
    <string name="edu">Education</string>
    <string name="skills">Skills</string>
    <string name="done">Done</string>
</resources>
