<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextThree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="63dp"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="text"
            android:textAlignment="gravity"
            android:textColor="@android:color/black"
            android:textColorHighlight="#64B5F6"
            android:textColorLink="#64B5F6"
            app:layout_constraintBottom_toTopOf="@+id/editTextFour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill,LabelFor"
            tools:text="editTextOne" />

        <EditText
            android:id="@+id/editTextFour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:ems="10"
            android:foregroundTint="#64B5F6"
            android:hint="@string/hobbies"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textColorHighlight="#64B5F6"
            android:textColorLink="#64B5F6"
            app:layout_constraintBottom_toTopOf="@+id/buttonThree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextThree"
            tools:ignore="Autofill,LabelFor"
            tools:text="editTextTwo" />

        <Button
            android:id="@+id/buttonThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="184dp"
            android:background="#7AEDC2"
            android:elevation="30dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/next"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextFour" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>